# RandomRaypath

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CompileRayShaders.cmake  LICENSE.txt  PackageRayDistribution.cmake  README.md  main.cpp
.claude/: settings.local.json
.claude/agents/: cmake-build-engineer.md  cpp-generalist.md  cpp-graphics-network-engineer.md  python-server-network.md
.claude/autocode_md/memory/: MEMORY.md
.claude/instructions/: architecture.md  build.md  conventions.md
autocode_md/: .claude
config/: client_renderer.toml  config.toml  default.toml  dev.toml  mcp_control.toml
mcp_raypath/: .gitignore  CLAUDE.md  CONTROL_PROTOCOL.md  PROTOCOL.md  main.py  mcp_server.py  requirements.txt  test_console_control.py
mcp_raypath/.claude/: settings.local.json
mcp_raypath/.claude/agent-memory/python-network-server/: MEMORY.md  project_remote_control_protocol.md
mcp_raypath/.claude/agents/: python-network-server.md
mcp_raypath/ray_mcp/: app_logging.py  mcp_server.py  remote_control_server.py
raypath_vault/: Agentic Autocode Extention.md  Autocode Integration TODO.md  Overview.canvas
resource/font/: gsanscode_w400_mtsdf.rgba  gsanscode_w500.csv
shaders/: camera.vert  glyph_msdf.frag  glyph_mtsdf.frag  glyph_mtsdf.vert  mono_color.frag  mono_color.vert  quad.vert  rainbow.frag  text_msdf.frag  text_msdf.vert  visual_grid.frag  visual_grid.vert
src/: main.cpp
src/config/: client_renderer.cpp  client_renderer.h  client_renderer.mpp  config.cpp  config.h
src/engine/: logical_loop.cpp  logical_loop.h
src/engine/logical_scene/: dev_test_scene.cpp  dev_test_scene.h  i_logical_scene.h  main_scene.cpp  main_scene.h  minecraft_scene.cpp  minecraft_scene.h  ph_crates_scene.cpp  ph_crates_scene.h
src/engine/logical_scene/core/: base_scene.cpp  base_scene.h  i_logical_scene.h
src/engine/logical_system/: logical_2d_world_view.cpp  logical_2d_world_view.h  logical_crate_sim.cpp  logical_crate_sim.h  logical_cursor_visualize.cpp  logical_cursor_visualize.h  logical_grid.cpp  logical_grid.h  logical_hud_info.cpp  logical_hud_info.h  logical_text_line.cpp  logical_text_line.h
src/graphics/: graphic_libs.h  graphics.mpp
src/graphics/engine/: graphical_loop.cpp  graphical_loop.h  scene_logic.cpp  scene_logic.h
src/graphics/engine/logical_scene/: dev_test_scene.cpp  dev_test_scene.h  i_logical_scene.h  main_scene.cpp  main_scene.h  minecraft_scene.cpp  minecraft_scene.h
src/graphics/engine/logical_system/: logical_2d_world_view.cpp  logical_2d_world_view.h  logical_crate_sim.cpp  logical_crate_sim.h  logical_grid.cpp  logical_grid.h  logical_hud_info.cpp  logical_hud_info.h  logical_text_line.cpp  logical_text_line.h
src/graphics/rhi/: g_app_driver.cpp  g_app_driver.h  renderer.cpp  renderer.h  renderer.mpp
src/graphics/rhi/pipeline/: object_2d_pipeline.h  pipeline.h  pipeline_manager.cpp  pipeline_manager.h
src/graphics/rhi/pipeline/impl/: glyph_msdf_pipeline.cpp  glyph_msdf_pipeline.h  glyph_pipeline.cpp  glyph_pipeline.h  rainbow_rect_pipeline.cpp  rainbow_rect_pipeline.h  solid_rect_pipeline.h  text_msdf_pipeline.cpp  text_msdf_pipeline.h  visual_grid_pipeline.cpp  visual_grid_pipeline.h
src/graphics/window/: window.cpp  window.h  window.mpp
src/network/: connection_test.cpp  connection_test.h
src/network/remote_control/: PROTOCOL.md  remote_control.cpp  remote_control.h
src/utils/: asio_config.h  ray_colors.h  ray_error.h  ray_font.cpp  ray_font.h  ray_glyph.cpp  ray_glyph.h  ray_index.h  ray_log.h  ray_profile.h  ray_time.h  ray_visual_config.h
